# psyfer

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  run_builder.sh
cmake/: FindSodium.cmake  psyfer-config.cmake.in
docs/: X25519_ACCELERATION.md  x25519_hardware_acceleration.md
examples/: 01_basic_encryption.cpp  02_hashing.cpp  03_compression.cpp  04_key_exchange.cpp  05_digital_signatures.cpp  06_secure_keys.cpp  07_authenticated_encryption.cpp  08_key_derivation.cpp  09_message_authentication.cpp  10_user_buffer_decrypt.cpp  11_compress_then_encrypt.cpp  12_psy_c_generated.cpp  13_complete_example.cpp  CMakeLists.txt  basic_encryption.cpp  hashing_example.cpp  password_encryption.cpp  simple_encrypt_method.cpp
include/: hashchain.hpp  psyfer.hpp
include/inkpacket/: ink_packet.hpp
include/logger/: logger.hpp
include/psyfer/compression/: fpc.hpp  lz4.hpp
include/psyfer/crypto/: aes128.hpp  aes256.hpp  chacha20.hpp  ed25519.hpp  x25519.hpp
include/psyfer/hash/: sha.hpp  xxhash3.hpp
include/psyfer/kdf/: hkdf.hpp
include/psyfer/mac/: aes_cmac.hpp
include/psyfer/serialization/: psy_runtime.hpp
include/psyfer/utils/: secure.hpp  secure_key.hpp
src/: psyfer.cpp  psyfer_context.cpp
src/compression/: compression_statics.cpp  fpc.cpp  lz4.cpp
src/crypto/: aes128.cpp  aes128_ni.cpp  aes256.cpp  aes256_commoncrypto.cpp  aes256_ni.cpp  aes_arm64.cpp  chacha20.cpp  ed25519.cpp  ed25519_cryptokit.h  ed25519_cryptokit.swift  ed25519_openssl.cpp  ed25519_ops.cpp  ed25519_software.cpp  ghash_portable.cpp  x25519.cpp  x25519_cryptokit.h  x25519_cryptokit.swift  x25519_neon.cpp  x25519_openssl.cpp
src/hash/: sha.cpp  sha_v2.cpp  xxhash3.cpp
src/inkpacket/: ink_packet_builder.cpp  ink_packet_embedded.cpp  ink_packet_loader.cpp  ink_packet_patcher.cpp
src/kdf/: hkdf.cpp
src/logger/: logger.cpp
src/mac/: aes_cmac.cpp
src/utils/: secure.cpp  secure_key.cpp
tests/: CMakeLists.txt  benchmark_x25519.cpp  test_aes256.cpp  test_aes_cmac.cpp  test_aes_comprehensive.cpp  test_aes_hw.cpp  test_basic_encryption.cpp  test_chacha20.cpp  test_chacha20_comprehensive.cpp  test_cmac_comprehensive.cpp  test_commoncrypto.cpp  test_commoncrypto_algos.cpp  test_compression.cpp  test_crypto_vectors.cpp  test_cryptokit.cpp  test_cryptokit_x25519.cpp  test_ed25519.cpp  test_ed25519_comprehensive.cpp  test_fpc.cpp  test_fpc_debug.cpp  test_goldenhash.cpp  test_hash_performance.cpp  test_hkdf.cpp  test_hmac_comprehensive.cpp  test_lz4.cpp  test_lz4_debug.cpp  test_macos_crypto.cpp  test_openssl_crypto.cpp  test_preprocessor.cpp  test_preprocessor2.cpp  test_psy_generated.cpp  test_psy_generated.hpp  test_psy_serialization.cpp  test_secure.cpp  test_secure_key.cpp  test_secure_memory.cpp  test_sha.cpp  test_sha_comprehensive.cpp  test_x25519.cpp  test_x25519_comprehensive.cpp  (+6 more)
tools/: ink_packer.cpp  ink_patch.cpp
tools/inkpacket/: README.md
tools/inkpacket/include/: ink_packet.hpp
tools/inkpacket/src/: ink_packer.cpp  ink_packet_builder.cpp  ink_patch.cpp
tools/psy-c/: CMakeLists.txt  design.md  example.psy  example_compression_impl.cpp  example_impl.cpp  test_full_pipeline.cpp  test_psy.cpp  test_simple_compression.cpp
tools/psy-c/include/psy-c/: ast.hpp  code_generator.hpp  impl_generator.hpp  lexer.hpp  parser.hpp
tools/psy-c/src/: ast.cpp  code_generator.cpp  impl_generator.cpp  lexer.cpp  main.cpp  parser.cpp  schema.cpp  type_system.cpp
tools/psy-c/tests/: CMakeLists.txt  example_schema.psy  test_basic.psy  test_compression.psy  test_crypto_integration.psy  test_generated_crypto.cpp  test_psy_compiler.cpp
